Added line chart for gini index of network nodes

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -530,3 +530,14 @@ month={9},
   year={1972},
   publisher={JSTOR}
 }
+
+@article{lin1991divergence,
+  title={Divergence measures based on the Shannon entropy},
+  author={Lin, Jianhua},
+  journal={IEEE Transactions on Information theory},
+  volume={37},
+  number={1},
+  pages={145--151},
+  year={1991},
+  publisher={IEEE}
+}
