Added PBS metrics to results section

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -541,3 +541,17 @@ month={9},
   year={1991},
   publisher={IEEE}
 }
+
+@article{offchainlabs2023,
+  author={Offchain Labs and Das, Nishant and Tsao, Terence and Van Loon, Preston and Potuz and Kirkham, Kasey and He, James},
+  month={5},
+  publisher={Offchain Labs},
+  title={{Post-Mortem Report: Ethereum Mainnet Finality (05/11/2023)}},
+  year={2023},
+  url={https://offchain.medium.com/post-mortem-report-ethereum-mainnet-finality-05-11-2023-95e271dfd8b2#:~:text=Summary,and%20incurred%20an%20inactivity%20penalty.},
+}
+
+@misc{lido2023,
+  title={{Lido on Ethereum Validator \& Node metrics}},
+  url={https://app.hex.tech/8dedcd99-17f4-49d8-944e-4857a355b90a/app/3f7d6967-3ef6-4e69-8f7b-d02d903f045b/latest},
+}
