--- a/conference_101719.tex
+++ b/conference_101719.tex
@@ -12,7 +12,7 @@ sorting=none
 \usepackage{enumitem}
 \usepackage{graphicx}
 \usepackage{textcomp}
-\usepackage{xcolor}
+\usepackage[table]{xcolor}
 \usepackage{pgfplots}
 \usepackage{pgfplotstable}
 \usepackage{rotating}
@@ -542,19 +542,19 @@ In this section we discuss the results of the application of our model to a samp
 \vspace{12pt}
 \begin{center}
 \begin{tabular}{lcccc}
-Metric & \rotatebox[origin=c]{90}{Gini} & \rotatebox[origin=c]{90}{HHI} & \rotatebox[origin=c]{90}{ Atkinson } & \rotatebox[origin=c]{90}{ Shannon } \\
-Execution Nodes by Country & 0.85 & 0.22 & 0.52 & 0.49 \\
-Execution Nodes by Client  & 0.77 & 0.5 & 0.44 & 0.28 \\
-Consensus Nodes by Country & 0.86 & 0.18 & 0.51 & 0.5 \\
-Consensus Nodes by Client & 0.63 & 0.32 & 0.28 & 0.3 \\
-Amount Staked by Pool & 0.9 & 0.2 & 0.61 & 0.55 \\
-Native Assets by Address & 0.76 & 0.4 & 0.44 & 0.33 \\
-Exchange by Supply & 0.65 & 0.33 & 0.29 & 0.3 \\
-Activity by Bundler & 0.12 & 0.53 & 0.01 & 0.1 \\
-Stablecoins by Tvl & 0.94 & 0.36 & 0.71 & 0.59 \\
-Rollups by Tvl & 0.87 & 0.47 & 0.55 & 0.45 \\
-Blocks by Builder & 0.78 & 0.2 & 0.43 & 0.43 \\
-Blocks by Relays & 0.59 & 0.23 & 0.24 & 0.33 \\
+Metric & \rotatebox[origin=c]{90}{Gini} & \rotatebox[origin=c]{90}{HHI} & \rotatebox[origin=c]{90}{ Atkinson } & \rotatebox[origin=c]{90}{ Shannon } \\ \hline
+Execution Nodes by Country & \cellcolor[HTML]{FF9F80}0.85 & \cellcolor[HTML]{D9FF80}0.22 & \cellcolor[HTML]{FFE580}0.52 & \cellcolor[HTML]{FFEC80}0.49 \\
+Execution Nodes by Client & \cellcolor[HTML]{FFB080}0.77 & \cellcolor[HTML]{FFEA80}0.5 & \cellcolor[HTML]{FFF780}0.44 & \cellcolor[HTML]{E6FF80}0.28 \\
+Consensus Nodes by Country & \cellcolor[HTML]{FF9D80}0.86 & \cellcolor[HTML]{D0FF80}0.18 & \cellcolor[HTML]{FFE880}0.51 & \cellcolor[HTML]{FFEA80}0.5 \\
+Consensus Nodes by Client & \cellcolor[HTML]{FFCE80}0.63 & \cellcolor[HTML]{EEFF80}0.32 & \cellcolor[HTML]{E6FF80}0.28 & \cellcolor[HTML]{EAFF80}0.3 \\
+Amount Staked by Pool & \cellcolor[HTML]{FF9580}0.9 & \cellcolor[HTML]{D5FF80}0.2 & \cellcolor[HTML]{FFD280}0.61 & \cellcolor[HTML]{FFDF80}0.55 \\
+Native Assets by Address & \cellcolor[HTML]{FFB380}0.76 & \cellcolor[HTML]{FFFF80}0.4 & \cellcolor[HTML]{FFF780}0.44 & \cellcolor[HTML]{F0FF80}0.33 \\
+Exchange by Supply & \cellcolor[HTML]{FFCA80}0.65 & \cellcolor[HTML]{F0FF80}0.33 & \cellcolor[HTML]{E8FF80}0.29 & \cellcolor[HTML]{EAFF80}0.3 \\
+Activity by Bundler & \cellcolor[HTML]{C4FF80}0.12 & \cellcolor[HTML]{FFE380}0.53 & \cellcolor[HTML]{ACFF80}0.01 & \cellcolor[HTML]{BFFF80}0.1 \\
+Stablecoins by Tvl & \cellcolor[HTML]{FF8C80}0.94 & \cellcolor[HTML]{F7FF80}0.36 & \cellcolor[HTML]{FFBD80}0.71 & \cellcolor[HTML]{FFD780}0.59 \\
+Rollups by Tvl & \cellcolor[HTML]{FF9B80}0.87 & \cellcolor[HTML]{FFF080}0.47 & \cellcolor[HTML]{FFDF80}0.55 & \cellcolor[HTML]{FFF480}0.45 \\
+Blocks by Builder & \cellcolor[HTML]{FFAE80}0.78 & \cellcolor[HTML]{D5FF80}0.2 & \cellcolor[HTML]{FFF980}0.43 & \cellcolor[HTML]{FFF980}0.43 \\
+Blocks by Relays & \cellcolor[HTML]{FFD780}0.59 & \cellcolor[HTML]{DBFF80}0.23 & \cellcolor[HTML]{DDFF80}0.24 & \cellcolor[HTML]{F0FF80}0.33 \\ \hline
 \end{tabular}
 \end{center}
 \caption{30 day averages across all metrics}
